--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,20 @@
-#fiveDay {
+#future {
   border: 1px solid black;
+}
+#header {
+  justify-content: center;
+  text-align: center;
+  height: 5em;
+
+}
+#name {
+  text-align: center;
+  text-align: center;
+}
+
+.jumbotron {
+  padding: 0;
+  margin-top: 1rem;
+  background-color: lightblue;
+  
 }
