--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
-#future {
+/* #future {
   border: 1px solid black;
-}
+} */
 #header {
   justify-content: center;
   text-align: center;
@@ -16,5 +16,5 @@
   padding: 0;
   margin-top: 1rem;
   background-color: lightblue;
-  
+
 }
