--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,7 @@
 #name {
   text-align: center;
   text-align: center;
+  color: white;
 }
 
 .jumbotron {
@@ -17,4 +18,9 @@
   margin-top: 1rem;
   background-color: lightblue;
 
+}
+
+#currentLoc {
+  color: white;
+  text-align: center;
 }
