buttons working, UV background

--- a/assets/style.css
+++ b/assets/style.css
@@ -23,4 +23,11 @@
 #currentLoc {
   color: white;
   text-align: center;
+  background-color: ;
 }
+
+.recentSearches {
+  margin-top: 10px;
+}
+
+#
